--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: 丘尘子
+subtitle: 零落成泥碾作尘，只有香如故
+description: 辉儿所思的博客
+author: O(∩_∩)O我吖~
+language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.inir.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -22,7 +22,8 @@ source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
-category_dir: categories
+category_dir: categorie
+s
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
@@ -63,9 +64,17 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+# default_themes   landscape
+theme: TKL
+
+# Search
+search:
+  path: search.xml
+  field: post
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: https://github.com/ixoywell/ixoywell.github.io.git
+  branch: master
